--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -16,9 +16,8 @@
     <ImageView
         android:id="@+id/image_word"
         android:src="@drawable/cat"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="4"
+        android:layout_width="400dp"
+        android:layout_height="400dp"
         android:scaleType="centerCrop"/>
 
     <TextView
