--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#69f0ae"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.android.legowords.MainActivity"
@@ -18,16 +19,24 @@
         android:src="@drawable/cat"
         android:layout_width="400dp"
         android:layout_height="400dp"
+        android:layout_gravity="center_horizontal"
         android:scaleType="centerCrop"/>
-
     <TextView
         android:id="@+id/txt1"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:textSize="65sp"
-        android:layout_gravity="center"
-        android:layout_margin="20dp"/>
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_margin="2dp"
+        android:visibility="gone"
+        tools:ignore="HardcodedText" />
+    <LinearLayout
+        android:id="@+id/layout_textview"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_weight="2"
+        android:gravity="center">
+
+    </LinearLayout>
     <LinearLayout
         android:id="@+id/layoutChars"
         android:orientation="horizontal"
