--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -21,13 +21,6 @@
         android:layout_height="400dp"
         android:layout_gravity="center_horizontal"
         android:scaleType="centerCrop"/>
-    <TextView
-        android:id="@+id/txt1"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_margin="2dp"
-        android:visibility="gone"
-        tools:ignore="HardcodedText" />
     <LinearLayout
         android:id="@+id/layout_textview"
         android:orientation="horizontal"
@@ -38,7 +31,7 @@
 
     </LinearLayout>
     <LinearLayout
-        android:id="@+id/layoutChars"
+        android:id="@+id/layout_letters"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="100dp"
